<resources>
    <string name="app_name">Shubham</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblname">First NAME</string>
    <string name="Mname">Middle Name</string>
    <string name="Lname">Last Name</string>
    <string name="OwnerProfileTitle">Add Customer Details</string>
    <string name="lblContact">Contact Information</string>
    <string name="lblHomePhone">Home Phone</string>
    <string name="lblMobile">Mobile</string>
    <string name="lblEmail">E-Mail</string>
    <string name="LblEmail">E-Mail</string>
</resources>
